# iced-gauges

./: .gitignore  Cargo.toml  README.md
examples/: big_pin.rs  clock.rs  compass.rs  configurable_round_rotated.rs  dashboard.rs  ex_clock.rs  ex_half_round.rs  half_round_rotated.rs  iced_clock.rs  pct30_round_rotated.rs  speedo.rs
src/: configurable_round.rs  custom.rs  ellipse.rs  full_round.rs  half_round.rs  half_round_rotated.rs  lib.rs  needle.rs  pct30_round_rotated.rs  pin.rs  round.rs  style.rs  tick.rs
src/style/: palette.rs
src/util/: ellipse.rs  frame.rs  mod.rs
