[package]
name = "iced-gauges"
version = "0.0.1"
authors = ["John Wass <jwass3@gmail.com>"]
categories = ["gui"]
description = "Gauges for Iced"
documentation = "https://docs.rs/iced-gauges"
edition = "2021"
exclude = ["examples/*", "screenshots/*"]
keywords = ["gauges", "iced", "gui", "ui", "widgets"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jw3/iced-gauges"
readme = "README.md"
# rust-version = ""

[dev-dependencies]
iced = { version = "0.9", features = ["tokio", "glow"] }
time = { version = "0.3", features = ["local-offset"] }

[dependencies]
iced = { version = "0.9", features = ["canvas", "debug"] }
